--- a/public/admin.html
+++ b/public/admin.html
@@ -1497,9 +1497,9 @@ comDatas[ben.id] = ben;
          lightbox.style.display = 'flex';
         console.log("Lien image :", ben.link);
         document.getElementById('imagePop').src = ben.link;
-        document.getElementById('imagePop').onclick = () => {
-          window.location.assign(`/icon?type=comptes&id=${ben.id}`, '_blank');
-        }
+        // document.getElementById('imagePop').onclick = () => {
+        //  window.location.assign(`/icon?type=comptes&id=${ben.id}`, '_blank');
+    //    }
          document.getElementById('lightH2B').innerHTML = ben.first_name + " " + ben.name + " <br> " + toreadOpt(ben.auth);
          document.getElementById('lightPB').textContent =  "Compte n°" + ben.id; // 
         document.getElementById('lightPB2').textContent =  "Euréa Coop";
