--- a/public/admin.html
+++ b/public/admin.html
@@ -741,7 +741,7 @@ let generalDatas;
         height:10vh;
         display:flex;
         flex-direction:row;
-        flex:1;
+     /*   flex:1; */
         background:linear-gradient(135deg, white, blue);
         border: 1vh solid black;
         margin-top:1vh;
@@ -754,13 +754,13 @@ let generalDatas;
   align-items: center;
   border-bottom: 1px solid #ccc;
   padding: 0.5rem;
-}
+} */
 
 .line > * {
   flex: 1;              
   text-align: center;   
 }
-*/
+
     </style>
      <script>
        const profilePic = document.getElementById('compte');
