--- a/public/admin.html
+++ b/public/admin.html
@@ -1790,9 +1790,9 @@ cerDatas[ben.id] = ben;
           const notes = document.createElement('p');
           notes.textContent = ben.code;
           line.append(notes);
-         const pds = document.createElement('p');
-        pds.textContent = ben.adresse;
-         line.append(pds);
+         // const pds = document.createElement('p');
+       // pds.textContent = ben.adresse;
+        // line.append(pds);
           bennesContainer.append(line);
         }
       }
