--- a/public/admin.html
+++ b/public/admin.html
@@ -742,7 +742,7 @@ let generalDatas;
         display:flex;
         flex-direction:row;
      /*   flex:1; */
-        background:linear-gradient(135deg, white, blue);
+        background:white; /*linear-gradient(135deg, white, blue);*/
         border: 1vh solid black;
         margin-top:1vh;
         align-items:center;
