--- a/public/admin.html
+++ b/public/admin.html
@@ -398,6 +398,7 @@
         display:flex;
         padding: 0 1rem;
         box-sizing: border-box;
+        border: solid white 0.5px;
       }
       #view {
         flex:1;
