--- a/public/admin.html
+++ b/public/admin.html
@@ -169,6 +169,14 @@
             </div>
           </div>
 
+          <div id="panel_L">
+            <p id="panel_L_p">EC</p>
+            <div style="display:none">
+              <select id="society_select">
+              </select>
+            </div>
+          </div>
+
           <div id="panel_I">
             <div class="w3-center" style="justify-content:space-around; display:flex; flex-direction:row">
             <p>Latitude</p>
