--- a/public/admin.html
+++ b/public/admin.html
@@ -1980,6 +1980,7 @@ paramDatas[ben.id] = ben;
         document.getElementById('panel_C_i').textContent = fromServer.d;
          document.getElementById('panel_V_p').textContent = fromServer.g;
         document.getElementById('panel_V_pb').textContent = fromServer.h;
+        document.getElementById('panel_L_p').textContent = fromServer.r;
 
 document.getElementById('editer_a').textContent = toread("A");
 document.getElementById('editer_a').style.backgroundColor = tocolor("A");
