--- a/public/admin.html
+++ b/public/admin.html
@@ -157,6 +157,10 @@
               #cereale_input:hover #bio_block {
                 display: flex;
               }
+
+            #selecterOptSociety {
+              display:flex;
+            }
           </style>
           
           <div id="panel_F">
@@ -171,7 +175,7 @@
 
           <div id="panel_L">
             <p id="panel_L_p">EC</p>
-            <div style="display:none">
+            <div id="selecterOptSociety" style="display:none">
               <select id="society_select">
               </select>
             </div>
