--- a/public/admin.html
+++ b/public/admin.html
@@ -158,7 +158,7 @@
                 display: flex;
               }
 
-            #selecterOptSociety {
+            #panel_L:hover #selecterOptSociety {
               display:flex;
             }
           </style>
