--- a/public/driver.html
+++ b/public/driver.html
@@ -46,7 +46,7 @@
    </div>
         <div id="main" class="menu">
       <button id="init_register" class="button_driver" onclick="document.getElementById('register').style.display='flex';document.getElementById('main').style.display='none';">Enregistrer une benne manuellement</button>
-    
+    <img src="https://cdn.pixabay.com/photo/2023/03/12/13/59/grain-7846979_1280.png" style="height:20vh; aspect-ratio:1/1;">
       <button class="button_driver" onclick="document.getElementById('find').style.display='flex';document.getElementById('main').style.display='none';">Trouver une benne</button>
     </div>
     <div id="register" style="display:none" class="menu">
