--- a/public/admin.html
+++ b/public/admin.html
@@ -861,6 +861,11 @@ async function translateColor (input) {
 }
       
     const markers = [];
+
+      async function plotStorage () {
+        const storagePoints = await fetcher('getstorage', content, 'POST', sessionStorage.getItem('session_id'));
+        console.log(storagePoints);
+      }
       
       async function plotPoints () {
         // On possède les données
