--- a/public/admin.html
+++ b/public/admin.html
@@ -863,8 +863,17 @@ async function translateColor (input) {
     const markers = [];
 
       async function plotStorage () {
-        const storagePoints = await fetcher('getstorage', {authentified:true}, 'POST', sessionStorage.getItem('session_id'));
+        const storagePoints = await fetcher('getstores', {authentified:true}, 'POST', sessionStorage.getItem('session_id'));
         console.log(storagePoints);
+        for (const point of storagePoints) {
+                   const circle = L.circle([point.longitude, point.latitude], {
+                    radius:point.radius,
+                    color:'blue',
+                    fillColor:'blue',
+                    fillOpacity:0.4
+                  })
+                  .addTo(map)
+        }
       }
 
       plotStorage();
