--- a/public/admin.html
+++ b/public/admin.html
@@ -873,6 +873,7 @@ async function translateColor (input) {
                     fillOpacity:0.4
                   })
                   .addTo(map)
+                  .bindPopup(point.name.toString())
         }
       }
 
