--- a/public/admin.html
+++ b/public/admin.html
@@ -868,8 +868,8 @@ async function translateColor (input) {
         for (const point of storagePoints) {
                    const circle = L.circle([point.longitude, point.latitude], {
                     radius:point.radius,
-                    color:'blue',
-                    fillColor:'blue',
+                    color:'royalblue',
+                    fillColor:'steelblue',
                     fillOpacity:0.4
                   })
                   .addTo(map)
