--- a/public/admin.html
+++ b/public/admin.html
@@ -304,6 +304,13 @@
         <div class="scroll-container" id="infosScroller">
           <div id="infosContent"></div> <!-- C'est ici qu'on va insérer les informations. Il faut savoir qu'on doit récupérer les bennes sous forme de liste, les insérer et quand on fait une recherche, on refait le protocole d'insertion sans le filtre-->
         </div>
+          <form id="createDPT">
+            <input class="input_search" type="text" name="name" placeholder="Nom du dépôt" required>
+              <input type="number" name="latitude" min="-90" max="90" step="0.000001" placeholder="Latitude">
+              <input type="number" name="longitude" min="-180" max="180" step="0.000001" placeholder="Longitude">
+            <input type="number" name="radius" min="0" max="1000" step="0.000001" placeholder="Rayon (m)">
+            <button type="submit">Créer un dépôt</button>
+          </form>
         <div id="searcherParamB">
               </div>
       </div>
