--- a/public/admin.html
+++ b/public/admin.html
@@ -406,7 +406,7 @@
         max-height:20vh;
         overflow-y:auto;
       }
-      #selecter, #searcherBenne, #createBenne, #createCompte, #searcherCompte, #createClient, #searcherClient, #createCereale, #searcherCereale, #createParam, #searcherParam, #searcherParamB {
+      #selecter, #searcherBenne, #createBenne, #createCompte, #searcherCompte, #createClient, #searcherClient, #createCereale, #searcherCereale, #createParam, #searcherParam, #searcherParamB, #createDPT {
         width:100%;
         height:5%;
         background:linear-gradient(90deg, black, grey);
