--- a/public/admin.html
+++ b/public/admin.html
@@ -307,10 +307,10 @@
       <!--  <div id="searcherParamB"></div> -->
         <form id="createDPT">
             <input class="input_search" type="text" name="name" placeholder="Nom du dépôt" required>
-              <input type="number" name="latitude" min="-90" max="90" step="0.000001" placeholder="Latitude">
-              <input type="number" name="longitude" min="-180" max="180" step="0.000001" placeholder="Longitude">
-            <input type="number" name="radius" min="0" max="1000" step="0.5" placeholder="Rayon (m)">
-            <button type="submit">Créer un dépôt</button>
+              <input class="input_search" type="number" name="latitude" min="-90" max="90" step="0.000001" placeholder="Latitude">
+              <input class="input_search" type="number" name="longitude" min="-180" max="180" step="0.000001" placeholder="Longitude">
+            <input class="input_search" type="number" name="radius" min="0" max="1000" step="0.5" placeholder="Rayon (m)">
+            <button class="input_search" type="submit">Créer un dépôt</button>
           </form>
       </div>
     </div>
