--- a/public/admin.html
+++ b/public/admin.html
@@ -310,7 +310,7 @@
               <input class="input_search" type="number" name="latitude" min="-90" max="90" step="0.000001" placeholder="Latitude">
               <input class="input_search" type="number" name="longitude" min="-180" max="180" step="0.000001" placeholder="Longitude">
             <input class="input_search" type="number" name="radius" min="0" max="1000" step="0.5" placeholder="Rayon (m)">
-            <button class="input_search" type="submit">Créer un dépôt</button>
+            <button  type="submit">Créer un dépôt</button>
           </form>
       </div>
     </div>
