--- a/public/driver.html
+++ b/public/driver.html
@@ -560,7 +560,7 @@ let onlive;
     </script>
     <script>
       async function readParams () {
-        showToast("Lecture des paramètres en cours...");
+        // showToast("Lecture des paramètres en cours...");
        
         const urlParams = new URLSearchParams(window.location.search);
         const action = urlParams.get('action');
