--- a/public/icon_changer.html
+++ b/public/icon_changer.html
@@ -102,7 +102,7 @@
       }
 
           async function readParams () {
-        showToast("Lecture des paramètres en cours...");
+      //  showToast("Lecture des paramètres en cours...");
        
         const urlParams = new URLSearchParams(window.location.search);
         const type = urlParams.get('type');
