--- a/public/historique.html
+++ b/public/historique.html
@@ -77,7 +77,7 @@
 let alltype;
 let allid;
           async function readParams () {
-        showToast("Lecture des paramètres en cours...");
+        // showToast("Lecture des paramètres en cours...");
        
         const urlParams = new URLSearchParams(window.location.search);
         const type = urlParams.get('type');
