--- a/public/admin.html
+++ b/public/admin.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-   
+   <link rel="stylesheet" href="/fileprovider?type=style&file=admin.css"/>
   </head>
   <body>
     <div id="toast-container"></div>
