--- a/public/driver.html
+++ b/public/driver.html
@@ -94,7 +94,7 @@
           display:flex;
           justify-content:center; /* aligné à l'horizontal */
           align-items:center; /* aligné en vertical */
-          background: linear-gradient(135deg, green, blue);
+          background: linear-gradient(135deg, red, blue);
           font-family: Arial, sans-serif;
            box-sizing:border-box; 
       }
