--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
       <form class="w3-center" id="login">
         <input id="former" class="w3-center" name="password" type="password" placeholder="Entrez votre mot de passe" required>
         <button id="clicker" class="w3-center" type="submit()">Se connecter</button>
+        <i>© 2025 MONIER Baptiste. Tous droits réservés.</i>
       </form>
       </div> 
     </div>
