--- a/public/icon_changer.html
+++ b/public/icon_changer.html
@@ -16,7 +16,7 @@
         <br>
         <button hidden id="from_internet">Utiliser une image d'internet</button>
         <button id="from_computer">Importer une image</button>
-        <button id="return" onclick="window.history.back();">Retour</button>
+        <button id="return" onclick="window.close();">Retour</button>
         <input hidden class="display:none" id="file_input" accept="image/*" type="file">
       </div>
     <div hidden id="cd" class="form-container w3-center">
