--- a/public/admin.html
+++ b/public/admin.html
@@ -10,7 +10,7 @@
    <link rel="stylesheet" href="/fileprovider?type=style&file=admin.css"/>
   </head>
   <body>
-     <script src="https://cdn.jsdelivr.net/npm/geodesy@2.4.0/latlon-ellipsoidal-vincenty.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@turf/turf@6/turf.min.js"></script>
     <div id="toast-container"></div>
     <div id="lightbox">
       <div class="lightbox-content w3-center">
