--- a/public/historique.html
+++ b/public/historique.html
@@ -10,12 +10,14 @@
   </head>
   <body>
      <div id="toast-container"></div>
-    <div id="pdfbutton">
-      PDF
-    </div>
-    <div style="border:2px outset black; overflow-y:auto; position:absolute; top:1vh; left:1vw; height:98vh; width:98vw;">
+  
+    <div style="border:2px outset black; overflow-y:auto; position:absolute; top:1vh; left:1vw; height:95vh; width:98vw;">
      <table class="w3-center" style="width:100%; border:2px solid black; border-collapse:collapse; text-align:center;vertical-align:center;" id="tablehisto"></table>
       <p class="w3-center" id="result">Chargement des données en cours...</p>
+    </div>
+    
+    <div style="position:absolute; top:96vh; left:1vw; height:3vh; width:98vw;">
+     <button>Format PDF</button>
     </div>
        <script>
       const offset = -((new Date().getTimezoneOffset()) / 60);
