--- a/public/historique.html
+++ b/public/historique.html
@@ -16,8 +16,10 @@
       <p class="w3-center" id="result">Chargement des données en cours...</p>
     </div>
     
-    <div style="position:absolute; top:96vh; left:1vw; height:3vh; width:98vw;">
+    <div style="display:flex, fex-direction:column; position:absolute; top:97vh; left:1vw; height:1vh; width:98vw;">
      <button>Format PDF</button>
+      <button>Format Excel</button>
+      <button>Format Texte</button>
     </div>
        <script>
       const offset = -((new Date().getTimezoneOffset()) / 60);
