--- a/public/historique.html
+++ b/public/historique.html
@@ -16,7 +16,7 @@
       <p class="w3-center" id="result">Chargement des données en cours...</p>
     </div>
     
-    <div style="display:flex, fex-direction:column; position:absolute; top:97vh; left:1vw; height:1vh; width:98vw;">
+    <div style="display:flex; flex-direction:row; position:absolute; top:97vh; left:1vw; height:1vh; width:98vw;">
      <button>Format PDF</button>
       <button>Format Excel</button>
       <button>Format Texte</button>
