--- a/public/historique.html
+++ b/public/historique.html
@@ -274,18 +274,7 @@ console.warn(`${jour}/${mois}/${annee} à ${heures}h${minutes}`);
           box-shadow: 0 8px 20px rgba(0,0,0,0.7);
          box-sizing:border-box;
       }
-      #pdfbutton {
-        position:absolute;
-        z-index:10000;
-        top: 50;
-        right:2vh;
-          opacity:50%;
-        color:blue;
-        background-color:white;
-      }
-      #pdfbutton:hover {
-        opacity:100%;
-      }
+      
       input {
         width: 100%;
         height:2vh;
@@ -299,7 +288,7 @@ console.warn(`${jour}/${mois}/${annee} à ${heures}h${minutes}`);
       button {
         width: 100%;
         padding: 0.75rem;
-        background-color:blue;
+        background-color:grey;
         color:white;
         margin-bottom: 1rem;
         border: none;
@@ -310,7 +299,7 @@ console.warn(`${jour}/${mois}/${annee} à ${heures}h${minutes}`);
        box-sizing:border-box;
       }
       button:hover {
-        background-color:red;
+        background-color:green;
       }
       #histocontainer {width:100%;}
       img {
