--- a/public/historique.html
+++ b/public/historique.html
@@ -11,12 +11,12 @@
   <body>
      <div id="toast-container"></div>
   
-    <div style="border:2px outset black; overflow-y:auto; position:absolute; top:1vh; left:1vw; height:90vh; width:98vw;">
+    <div style="border:2px outset black; overflow-y:auto; position:absolute; top:1vh; left:1vw; height:92vh; width:98vw;">
      <table class="w3-center" style="width:100%; border:2px solid black; border-collapse:collapse; text-align:center;vertical-align:center;" id="tablehisto"></table>
       <p class="w3-center" id="result">Chargement des données en cours...</p>
     </div>
     
-    <div style="display:flex; flex-direction:row; position:absolute; top:92vh; left:1vw; height:5vh; width:98vw;">
+    <div style="display:flex; flex-direction:row; position:absolute; top:94vh; left:1vw; height:5vh; width:98vw;">
      <button>Format PDF</button>
       <button>Format Excel</button>
       <button>Format Texte</button>
@@ -288,7 +288,7 @@ console.warn(`${jour}/${mois}/${annee} à ${heures}h${minutes}`);
       button {
         width: 100%;
         padding: 0.75rem;
-        background-color:grey;
+        background-color:white;
         color:white;
         margin-bottom: 1rem;
         border: none;
@@ -297,6 +297,7 @@ console.warn(`${jour}/${mois}/${annee} à ${heures}h${minutes}`);
         cursor:pointer;
         transition:background 0.3s ease;
        box-sizing:border-box;
+        align-items:center;
       }
       button:hover {
         background-color:green;
