--- a/public/historique.html
+++ b/public/historique.html
@@ -16,7 +16,7 @@
       <p class="w3-center" id="result">Chargement des données en cours...</p>
     </div>
     
-    <div style="display:flex; flex-direction:row; position:absolute; top:94vh; left:1vw; height:5vh; width:98vw;">
+    <div style="display:flex; flex-direction:row; position:absolute; top:94vh; left:1vw; height:6vh; width:98vw;">
      <button onclick="generatePdf();">Format PDF</button>
       <button>Format Excel</button>
       <button>Format Texte</button>
@@ -289,7 +289,7 @@ console.warn(`${jour}/${mois}/${annee} à ${heures}h${minutes}`);
         width: 100%;
         padding: 0.75rem;
         background-color:white;
-        color:white;
+        color:black;
         margin-bottom: 1rem;
         border: none;
         border-radius: 0.5rem;
