--- a/public/historique.html
+++ b/public/historique.html
@@ -339,7 +339,8 @@ console.warn(`${jour}/${mois}/${annee} à ${heures}h${minutes}`);
       }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-// PDF
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
+
     <script>
       // Génération des documents
        function generatePdf() {
