--- a/public/admin.html
+++ b/public/admin.html
@@ -203,6 +203,7 @@
                   <button style="background-color:blue;" onclick="document.getElementById('text_searcherBenne').value = 'STAT$END'; putBennes(document.getElementById('text_searcherBenne').value);">En dépôt</button>
                 </div>
                 <button id="filtrerBennes" onclick="putBennes(document.getElementById('text_searcherBenne').value);">Filtrer</button>
+                <label id="resultcheckbox" for="smartcheck">Alphabétique</label>
                <input type="checkbox" id="smartcheck">
                 <button onclick="putBennes('no'); document.getElementById('text_searcherBenne').value = '';">Réinitialiser</button>
                 <progress id="benne_progress" value="0" max="100"></progress>
