--- a/public/historique.html
+++ b/public/historique.html
@@ -259,7 +259,7 @@ console.warn(`${jour}/${mois}/${annee} à ${heures}h${minutes}`);
           display:flex;
           justify-content:center; /* aligné à l'horizontal */
           align-items:center; /* aligné en vertical */
-          background: linear-gradient(135deg, blue, red);
+          background: grey;
           font-family: Arial, sans-serif;
            box-sizing:border-box; 
       }
