--- a/public/admin.html
+++ b/public/admin.html
@@ -206,7 +206,7 @@
                 <label id="resultcheckbox" style="color:white;" for="smartcheck">Alphabétique</label>
                <input type="checkbox" id="smartcheck">
                 <button onclick="putBennes('no'); document.getElementById('text_searcherBenne').value = '';">Réinitialiser</button>
-                <progress id="benne_progress" value="0" max="100"></progress>
+             <!--   <progress id="benne_progress" value="0" max="100"></progress> -->
               </div>
         <div class="scroll-container" id="bennesScroller">
           <div id="bennesContent"></div> <!-- C'est ici qu'on va insérer les bennes. Il faut savoir qu'on doit récupérer les bennes sous forme de liste, les insérer et quand on fait une recherche, on refait le protocole d'insertion sans le filtre-->
